# apache-airflow-providers-rabbitmq

./: README.md  SUMMARY.md  pyproject.toml
.github/workflows/: ci.yml  lint.yml  release.yml
src/airflow/providers/rabbitmq/: __init__.py  provider.yaml
src/airflow/providers/rabbitmq/hooks/: rabbitmq_hook.py
src/airflow/providers/rabbitmq/operators/: rabbitmq_producer.py
src/airflow/providers/rabbitmq/sensors/: rabbitmq_sensor.py
src/apache_airflow_provider_rabbitmq/: provider.yaml
src/apache_airflow_provider_rabbitmq/hooks/: rabbitmq_hook.py
src/apache_airflow_provider_rabbitmq/operators/: rabbitmq_producer.py
src/apache_airflow_provider_rabbitmq/sensors/: rabbitmq_sensor.py
tests/: conftest.py
tests/integration/: test_rabbitmq_integration.py
tests/unit/hooks/: test_rabbitmq_hook.py
tests/unit/operators/: test_rabbitmq_producer.py
tests/unit/sensors/: test_rabbitmq_sensor.py
