#[build-system]
#requires = ["uv>=0.4.0"]


[project]
name = "apache-airflow-provider-rabbitmq"
version = "0.1.0"
description = "Airflow provider for RabbitMQ with sync/async messaging."
authors = [
    { name = "Mustafa Abuelfadl", email = "mustafa@zidan.me" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
dependencies = [
    "apache-airflow>=2.0.0,<3.0.0",
    "pika>=1.3.0,<2.0.0",        # Sync RabbitMQ
    "aio-pika>=9.5.0,<10.0.0",   # Async RabbitMQ
]

[tool.uv]
# uv-specific settings

[tool.pytest.ini_options]
pythonpath = "src"
addopts = "-v --tb=short"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.mypy]
strict = true